--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [build-system]
-requires = ["hatchling"]
+requires = ["hatchling >= 1.26"]
 build-backend = "hatchling.build"
 
 [project]
 name = "growatt_public_api"
-version = "2025.06.03"
+version = "2025.07.13"
 authors = [
   { name="Timo Hencken", email="github@hencken.de" },
 ]
